Partial signing of assembly and Manifest generation for static/dynamic x64/x86 building without breaking incremental linking.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6790 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -76,7 +76,7 @@
 				Name="VCPreLinkEventTool"/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG;OBSOLETE_MANIFEST"
+				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="$(IntDir)"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
@@ -165,7 +165,7 @@
 				Name="VCPreLinkEventTool"/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG;OBSOLETE_MANIFEST"
+				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="$(IntDir)"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
@@ -255,7 +255,7 @@
 				Name="VCPreLinkEventTool"/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG;OBSOLETE_MANIFEST"
+				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="$(IntDir)"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
@@ -337,7 +337,7 @@
 				Name="VCPreLinkEventTool"/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG;OBSOLETE_MANIFEST"
+				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="$(IntDir)"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
@@ -3699,7 +3699,7 @@
 				RelativePath="..\shareaza\Res\Mail.ico">
 			</File>
 			<File
-				RelativePath="..\shareaza\Res\ManifestVC71.xml">
+				RelativePath="..\shareaza\Res\Manifest.xml">
 			</File>
 			<File
 				RelativePath="..\shareaza\Res\Media.ico">
