Changed host cache for playing with DHT and KAD. Splitted DHT and KAD sources from Datagrams. Version bumped up to 2.3.1.3.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6797 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -500,6 +500,10 @@
 				>
 			</File>
 			<File
+				RelativePath="DHT.cpp"
+				>
+			</File>
+			<File
 				RelativePath="DiscoveryServices.cpp"
 				>
 			</File>
@@ -705,6 +709,10 @@
 			</File>
 			<File
 				RelativePath="ImageServices.cpp"
+				>
+			</File>
+			<File
+				RelativePath="Kademlia.cpp"
 				>
 			</File>
 			<File
@@ -2909,6 +2917,10 @@
 				>
 			</File>
 			<File
+				RelativePath="DHT.h"
+				>
+			</File>
+			<File
 				RelativePath="DiscoveryServices.h"
 				>
 			</File>
@@ -3122,6 +3134,10 @@
 			</File>
 			<File
 				RelativePath="ImageServices.h"
+				>
+			</File>
+			<File
+				RelativePath="Kademlia.h"
 				>
 			</File>
 			<File
