--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -134,8 +134,8 @@ IDR_CHANSFRAME          ICON                    "Res\\channel.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,3,1,2
- PRODUCTVERSION 2,3,1,2
+ FILEVERSION 2,3,1,3
+ PRODUCTVERSION 2,3,1,3
  FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -153,12 +153,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 3, 1, 2"
+            VALUE "FileVersion", "2, 3, 1, 3"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2008. All rights reserved."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 3, 1, 2"
+            VALUE "ProductVersion", "2, 3, 1, 3"
         END
     END
     BLOCK "VarFileInfo"
@@ -4878,6 +4878,8 @@ BEGIN
     ID_SEARCH_COLUMNS       "Select metadata columns to be displayed..."
     ID_SEARCH_DOWNLOADNOW   "Download the selected file(s) with priority."
     ID_DOWNLOADS_RESUME     "Resume the selected download(s)."
+    ID_HOSTCACHE_BT_CACHE   "Show BitTorrent cached hosts."
+    ID_HOSTCACHE_KAD_CACHE  "Show Kademlia cached hosts."
     ID_DOWNLOADS_CLEAR_COMPLETED "Clear downloads which have been completed."
     ID_DOWNLOADS_SOURCES    "Search for more sources for the selected download(s)."
     ID_DOWNLOADS_LAUNCH     "Preview the selected file(s) in place."
