Fixed manifest inclusion for VS2008 project. Bumped manifest version.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6802 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -81,11 +81,11 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib version.lib ws2_32.lib wininet.lib Iphlpapi.lib msi.lib"
 				LinkIncremental="2"
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
-				KeyFile=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -172,6 +172,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib version.lib ws2_32.lib wininet.lib Iphlpapi.lib msi.lib"
 				LinkIncremental="2"
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -265,6 +266,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib version.lib ws2_32.lib wininet.lib Iphlpapi.lib msi.lib"
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -360,6 +362,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="winmm.lib version.lib ws2_32.lib wininet.lib Iphlpapi.lib msi.lib"
+				GenerateManifest="false"
 				IgnoreDefaultLibraryNames=""
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -4830,10 +4833,6 @@
 			</File>
 			<File
 				RelativePath="Res\Mail.ico"
-				>
-			</File>
-			<File
-				RelativePath="Res\Manifest.xml"
 				>
 			</File>
 			<File
